packages/web-awesome/src/components/SplitLayout/styles.scss
@use "../../styles/pane-active" as paneActive;

.layout {
  margin: auto;
  padding: 12px 32px;
  background: var(--color-bg-canvas);
  color: var(--color-text-primary);
  font-size: 14px;
}

.wrapper {
  display: flex;
  width: 100%;
  flex-direction: column;
  margin: auto;
  position: relative;
  height: 100%;
  min-height: 0;
}

.content {
  box-shadow: var(--shadow-small);
  background: var(--color-bg-primary);
  border-radius: 12px;
  width: 100%;
  overflow: hidden;
  overflow-y: scroll;
  position: relative;
  min-height: 100%;
}

.test-results {
  min-height: 320px;
  padding-bottom: 32px;
  padding-top: 12px;
}

.logo {
  display: inline-block;
  margin-bottom: 12px;
}

.title {
  font-size: 14px;
  line-height: 1.25;
  color: var(--color-text-primary);
  margin-bottom: 8px;
}

.above {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding-bottom: 12px;
  align-items: center;
}

.below {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: auto;
  width: 100%;
  padding: 8px 8px;
}

.test-result-errors {
  padding: 0 24px;
  margin-top: 12px;
}

.side-by-side {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.empty {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.empty-split-pane {
  position: relative;
  background: var(--bg-base-primary);
  border-radius: 12px;
  overflow: auto;
  @include paneActive.split-pane-indicator;

  &.pane-active {
    @include paneActive.split-pane-indicator-active;
  }
}

.header {
  padding: 8px;
  margin-bottom: 0;
}

